# pacs_bridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  mkdocs.yml  vcpkg.json
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  emr-tests.yml
benchmarks/: CMakeLists.txt  adapter_benchmark.cpp  baseline_benchmark.cpp
cmake/: CompilerFlags.cmake  FindPacsSystem.cmake  pacs_bridge-config.cmake.in
docs/: PRD.md  PRD_KO.md  SDS.md  SDS_COMPONENTS.md  SDS_COMPONENTS_KO.md  SDS_INTERFACES.md  SDS_INTERFACES_KO.md  SDS_KO.md  SDS_SEQUENCES.md  SDS_SEQUENCES_KO.md  SDS_TRACEABILITY.md  SDS_TRACEABILITY_KO.md  SRS.md  SRS_KO.md  VALIDATION_REPORT.md  VALIDATION_REPORT_KO.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_KO.md  index.md  integration_guide.md  performance_report.md
docs/admin-guide/: backup-recovery.md  deployment.md  high-availability.md  monitoring.md
docs/api/: error-codes.md  fhir-api.yaml  hl7-messages.md
docs/developer/: architecture.md  contributing.md  modules.md
docs/monitoring/: README.md
docs/operations/: runbook.md
docs/reference_materials/: 01_hl7_v2x_overview.md  02_hl7_message_types.md  03_hl7_segments.md  04_mllp_protocol.md  05_fhir_radiology.md  06_ihe_swf_profile.md  07_dicom_hl7_mapping.md  08_mwl_hl7_integration.md  README.md
docs/user-guide/: configuration.md  getting-started.md  message-flows.md  troubleshooting.md
examples/: CMakeLists.txt
examples/config/: config-minimal.yaml  config-production.yaml  config.yaml
src/: CMakeLists.txt  bridge_server.cpp
src/app/: main.cpp
src/cache/: patient_cache.cpp
src/config/: admin_server.cpp  bridge_config.cpp  config_loader.cpp  config_manager.cpp  emr_config.cpp
src/emr/: CMakeLists.txt  diagnostic_report_builder.cpp  emr_adapter.cpp  emr_types.cpp  encounter_context.cpp  fhir_bundle.cpp  fhir_client.cpp  fhir_patient_parser.cpp  http_client_adapter.cpp  patient_lookup.cpp  patient_matcher.cpp  result_poster.cpp  result_tracker.cpp
src/emr/adapters/: generic_fhir_adapter.cpp
src/fhir/: CMakeLists.txt  fhir_resource.cpp  fhir_server.cpp  fhir_types.cpp  imaging_study_resource.cpp  operation_outcome.cpp  patient_resource.cpp  resource_handler.cpp  service_request_resource.cpp  subscription_manager.cpp  subscription_resource.cpp
src/hl7/: CMakeLists.txt
src/integration/: CMakeLists.txt  database_adapter.cpp  executor_adapter.cpp  logger_adapter.cpp  mwl_adapter.cpp  network_adapter.cpp  pacs_adapter.cpp  thread_adapter.cpp
src/mapping/: dicom_hl7_mapper.cpp  fhir_dicom_mapper.cpp  hl7_dicom_mapper.cpp
src/messaging/: hl7_events.cpp  hl7_message_bus.cpp  hl7_pipeline.cpp  hl7_request_handler.cpp  messaging_backend.cpp
src/mllp/: bsd_mllp_server.cpp  bsd_mllp_server.h  mllp_client.cpp  mllp_network_adapter.cpp  mllp_server.cpp  network_system_mllp_server.cpp  network_system_mllp_server.h  tls_mllp_server.cpp  tls_mllp_server.h
src/modules/: pacs_bridge-emr.cppm  pacs_bridge-fhir.cppm  pacs_bridge-hl7.cppm  pacs_bridge-mapping.cppm  pacs_bridge-mllp.cppm  pacs_bridge-router.cppm  pacs_bridge-server.cppm  pacs_bridge.cppm
src/monitoring/: bridge_metrics.cpp  health_checker.cpp  health_server.cpp
src/pacs_adapter/: mpps_handler.cpp  mwl_client.cpp
src/performance/: benchmark_runner.cpp  connection_optimizer.cpp  lockfree_queue.cpp  object_pool.cpp  thread_pool_manager.cpp  zero_copy_parser.cpp
tests/: CMakeLists.txt  README.md  adt_handler_test.cpp  bar_handler_test.cpp  benchmark_suite_test.cpp  bridge_metrics_test.cpp  cache_test.cpp  concurrency_thread_safety_test.cpp  config_manager_test.cpp  config_test.cpp  crtp_handler_test.cpp  database_adapter_test.cpp  dicom_hl7_mapper_test.cpp  docker-compose.test.yml  ecosystem_integration_test.cpp  emr_adapter_test.cpp  emr_config_test.cpp  encounter_context_test.cpp  executor_adapter_test.cpp  executor_integration_test.cpp  fhir_client_test.cpp  fhir_dicom_mapper_test.cpp  fhir_server_test.cpp  health_check_test.cpp  hl7_encoding_iso_conversion_test.cpp  hl7_extended_test.cpp  hl7_malformed_segment_recovery_test.cpp  hl7_test.cpp  hl7_validation_edge_cases_test.cpp  imaging_study_resource_test.cpp  load_test.cpp  logger_adapter_test.cpp  mapper_extended_test.cpp  mapping_test.cpp  mdm_handler_test.cpp  memory_safety_test.cpp  mfn_handler_test.cpp  mllp_test.cpp  monitoring_metrics_completeness_test.cpp  monitoring_trace_validation_test.cpp  (+28 more)
tests/data/: ack_sample.hl7  adt_a01_sample.hl7  adt_a08_sample.hl7  orm_o01_sample.hl7  oru_r01_sample.hl7
tests/e2e/: CMakeLists.txt  fhir_workflow_test.cpp  hl7_to_mpps_workflow_test.cpp
tests/fixtures/: README.md
tests/fixtures/fhir_resources/: diagnostic_report.json  encounter.json  imaging_study.json  patient.json  patient_bundle.json  service_request.json
tests/fixtures/mock_responses/: empty_bundle.json  oauth_token.json  operation_outcome_error.json  smart_configuration.json
tests/integration/: backwards_compatibility_test.cpp  database_adapter_test.cpp  database_system_integration_test.cpp  disaster_recovery_test.cpp  e2e_scenario_test.cpp  emr_e2e_test.cpp  failover_test.cpp  hapi_fhir_test.cpp  integration_test_base.h  mllp_connection_test.cpp  monitoring_integration_test.cpp  mpps_integration_test.cpp  mpps_persistence_test.cpp  multi_pacs_failover_test.cpp  mwl_database_test.cpp  pacs_stress_test.cpp  pacs_system_e2e_test.cpp  pacs_system_test_base.h  pacs_worklist_test.cpp  phase2_e2e_test.cpp  queue_persistence_test.cpp  standalone_mode_test.cpp  stress_test.cpp  system_integration_test.cpp  test_utilities.h
tests/messaging/: hl7_events_test.cpp  messaging_pattern_test.cpp
tests/mllp/: CMakeLists.txt  bsd_adapter_test.cpp  memory_leak_test.cpp  mllp_network_adapter_test.cpp  performance_test.cpp  tls_adapter_test.cpp
tests/mllp/fixtures/: test_client_cert.pem  test_client_key.pem  test_server_cert.pem  test_server_key.pem
tests/mllp/fixtures/tests/mllp/fixtures/: test_client_cert.pem  test_client_key.pem  test_server_cert.pem  test_server_key.pem
tests/unit/: CMakeLists.txt
tests/utils/: test_helpers.h
(+143 files in other folders)
